Fixed assignment alignment and changed the button style a little bit.

--- a/web-app/css/index.css
+++ b/web-app/css/index.css
@@ -27,15 +27,11 @@ padding:10px;
 padding-top:15px;
 padding-bottom:1px;
 background-color: #002244;
-  width: 100%;
-  text-align: center;
 }
 .panel-default{
 	width:100%;
 	margin-left:0.75%;
 	margin-right:0.75%;
-	margin-bottom:50px;
-	display: inline-block;
 }
 #go1, #go2, #go3, #go4, #go5 {
 	text-align:center;
@@ -153,16 +149,14 @@ is why the show more does not work. We need to fix this.*?
 	padding: 8px;
 	top: 70px;
 	left: 10px;
-	width: 97%;
-	height: 90%;
-	box-shadow: 10px 10px 5px #463E3F
+	width:98%;
+	height:97%;
+	box-shadow: 10px 10px 5px #463E3F;
 }
 #close {
 	float:right;
 	margin-right:5px;
 }
-#oHead {
-	display:block;
-}
+
 
 
